# mysite

./: pyproject.toml
mysite/: settings.py
render/templates/render/: index.html
